--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -4,8 +4,8 @@ https://www.fontsquirrel.com
 */
 body {
     font-family: 'open_sansregular';
-    color: #ffecdb;
-    background-color: #965173;
+    color: #360000;
+    background-color: #FF301E;
     text-align: center;
     vertical-align: middle;
     margin: 3px;
