--- a/css/normalize.css
+++ b/css/normalize.css
@@ -11,8 +11,8 @@
    ========================================================================== */
 
 html {
-  font-family: 'open_sansregular'; /* 1 */
-  line-height: 1.15; /* 2 */
+  font-family: sans-serif; /* 1 */
+  line-height: 1.5; /* 2 */
   -ms-text-size-adjust: 100%; /* 3 */
   -webkit-text-size-adjust: 100%; /* 3 */
 }
