--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -3,7 +3,7 @@ http://www.htmlbasix.com/stylesheet.shtml
 https://www.fontsquirrel.com
 */
 body {
-    font-family: 'open_sansregular';
+    font-family: 'Open Sans';
     color: #360000;
     background-color: #FF301E;
     text-align: center;
@@ -26,7 +26,7 @@ form {
     font-weight: bold;
 }
 @font-face {
-    font-family: 'open_sansregular';
+    font-family: 'Open Sans';
     src: url('OpenSans-Regular-webfont.eot');
     src: url('OpenSans-Regular-webfont.eot?#iefix') format('embedded-opentype'),
          url('OpenSans-Regular-webfont.woff') format('woff'),
@@ -41,3 +41,36 @@ a {
 .bold {
     font-weight: bold;
 }
+
+.titleText {
+    font-size: 21px;
+    color: rgb( 255, 48, 30 );
+    text-decoration: underline;
+    text-transform: uppercase;
+    text-align: center;
+    font-weight: bold;
+    -moz-transform: matrix( 1.84421771631566, 0, 0, 1.84421771631566, 0, 0);
+    -webkit-transform: matrix( 1.84421771631566, 0, 0, 1.84421771631566, 0, 0);
+    position: absolute;
+    left: 0px;
+    right: 0px;
+    margin-left: auto;
+    margin-right: auto;
+    top: 0px;
+    bottom: 0px;
+    margin-top: auto;
+    margin-bottom: auto;
+    width: 598px;
+    height: 36px;
+    z-index: 3;
+}
+.titleBG {
+    background-color: rgb( 54, 0, 0 );
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    height: 80px;
+    z-index: 2;
+}
+
