--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -2,17 +2,18 @@
 http://www.htmlbasix.com/stylesheet.shtml
 https://www.fontsquirrel.com
 */
-body {
+html, body {
     font-family: 'Open Sans';
     color: #360000;
     background-color: #FF301E;
     text-align: center;
     vertical-align: middle;
-    margin: 3px;
-    padding: 3px;
+    padding: 0;
+    margin: 0;
 }
 h1 {
     text-decoration: underline;
+    font-size: 50px;
 }
 div {
     /*
@@ -43,34 +44,31 @@ a {
 }
 
 .titleText {
-    font-size: 21px;
-    color: rgb( 255, 48, 30 );
-    text-decoration: underline;
-    text-transform: uppercase;
-    text-align: center;
+    color: #FF301E;
+    font-size: 40px;
     font-weight: bold;
-    -moz-transform: matrix( 1.84421771631566, 0, 0, 1.84421771631566, 0, 0);
-    -webkit-transform: matrix( 1.84421771631566, 0, 0, 1.84421771631566, 0, 0);
-    position: absolute;
-    left: 0px;
-    right: 0px;
-    margin-left: auto;
-    margin-right: auto;
-    top: 0px;
-    bottom: 0px;
-    margin-top: auto;
-    margin-bottom: auto;
-    width: 598px;
-    height: 36px;
-    z-index: 3;
+    text-align: center;
+    width: 100%;
+    height: 100%;
+    text-transform: uppercase;
+    display: table; 
 }
-.titleBG {
+.header {
     background-color: rgb( 54, 0, 0 );
     position: absolute;
     left: 0px;
     top: 0px;
     width: 100%;
-    height: 80px;
+    height: 160px;
     z-index: 2;
+}
+
+.body {
+    background-color: rgb( 255, 48, 30 );
+    position: absolute;
+    left: 0px;
+    top: 165px;
+    width: 100%;
+    z-index: 3;
 }
 
