--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -43,6 +43,15 @@ a {
     font-weight: bold;
 }
 
+.header {
+    background-color: rgb( 54, 0, 0 );
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    height: 120px;
+    z-index: 2;
+}
 .titleText {
     color: #FF301E;
     font-size: 40px;
@@ -53,21 +62,17 @@ a {
     text-transform: uppercase;
     display: table; 
 }
-.header {
-    background-color: rgb( 54, 0, 0 );
-    position: absolute;
-    left: 0px;
-    top: 0px;
-    width: 100%;
-    height: 160px;
-    z-index: 2;
+.titleText p {
+    display: table-cell;
+    text-align: center;
+    vertical-align: middle;
 }
 
 .body {
     background-color: rgb( 255, 48, 30 );
     position: absolute;
     left: 0px;
-    top: 165px;
+    top: 125px;
     width: 100%;
     z-index: 3;
 }
