--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -73,3 +73,40 @@ a {
     z-index: 3;
 }
 
+button {
+    border-width: 1.333px;
+    border-color: rgb( 169, 169, 169 );
+    border-style: solid;
+    border-radius: 3px;
+    background-image: -moz-linear-gradient( 90deg, rgb( 222, 222, 222 ) 0%, rgb( 255, 255, 255 ) 100%);
+    background-image: -webkit-linear-gradient( 90deg, rgb( 222, 222, 222 ) 0%, rgb( 255, 255, 255 ) 100%);
+    position: relative;
+    width: auto;
+    height: auto;
+}
+button:hover, button:focus {
+    border-width: 1.333px;
+    border-color: rgb( 123, 123, 123 );
+    border-style: solid;
+    border-radius: 3px;
+    background-image: -moz-linear-gradient( 90deg, rgb( 222, 222, 222 ) 0%, rgb( 255, 255, 255 ) 100%);
+    background-image: -webkit-linear-gradient( 90deg, rgb( 222, 222, 222 ) 0%, rgb( 255, 255, 255 ) 100%);
+    position: relative;
+    width: auto;
+    height: auto;
+}
+button:active {
+    border-width: 1.333px;
+    border-color: rgb( 148, 148, 148 );
+    border-style: solid;
+    border-radius: 3px;
+    background-image: -moz-linear-gradient( 90deg, rgb( 247, 247, 247 ) 0%, rgb( 223, 223, 223 ) 100%);
+    background-image: -webkit-linear-gradient( 90deg, rgb( 247, 247, 247 ) 0%, rgb( 223, 223, 223 ) 100%);
+    position: relative;
+    width: auto;
+    height: auto;
+}
+
+textarea {
+    width: 100%;
+}
