--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -2,7 +2,7 @@
 http://www.htmlbasix.com/stylesheet.shtml
 https://www.fontsquirrel.com
 */
-html, body {
+body {
     font-family: 'Open Sans';
     color: #360000;
     background-color: #FF301E;
@@ -11,11 +11,11 @@ html, body {
     padding: 0;
     margin: 0;
 }
-button {
-    font-size: 87%;
-}
 form {
     font-weight: bold;
+}
+a {
+    text-decoration: none;
 }
 @font-face {
     font-family: 'Open Sans';
