--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -70,20 +70,22 @@ a {
 }
 
 button {
-    border-width: 1.333px;
-    border-color: rgb( 169, 169, 169 );
+    border-width: 1px;
+    border-color: rgb( 194, 140, 140 );
     border-style: solid;
     border-radius: 3px;
-    background-image: -moz-linear-gradient( 90deg, rgb( 222, 222, 222 ) 0%, rgb( 255, 255, 255 ) 100%);
-    background-image: -webkit-linear-gradient( 90deg, rgb( 222, 222, 222 ) 0%, rgb( 255, 255, 255 ) 100%);
+    background-image: -moz-linear-gradient( 90deg, rgb( 255, 209, 209 ) 0%, rgb( 255, 255, 255 ) 100%);
+    background-image: -webkit-linear-gradient( 90deg, rgb( 255, 209, 209 ) 0%, rgb( 255, 255, 255 ) 100%);
     position: relative;
     width: auto;
     height: auto;
 }
+
 button div {
     display: table;
     width: 100%;
     height: 100%;
+    color: #360000;
 }
 button div p {
     display: table-cell;
@@ -91,23 +93,23 @@ button div p {
     vertical-align: middle;
 }
 button:hover, button:focus {
-    border-width: 1.333px;
-    border-color: rgb( 123, 123, 123 );
+    border-width: 1px;
+    border-color: rgb( 161, 107, 107 );
     border-style: solid;
     border-radius: 3px;
-    background-image: -moz-linear-gradient( 90deg, rgb( 222, 222, 222 ) 0%, rgb( 255, 255, 255 ) 100%);
-    background-image: -webkit-linear-gradient( 90deg, rgb( 222, 222, 222 ) 0%, rgb( 255, 255, 255 ) 100%);
+    background-image: -moz-linear-gradient( 90deg, rgb( 255, 209, 209 ) 0%, rgb( 255, 255, 255 ) 100%);
+    background-image: -webkit-linear-gradient( 90deg, rgb( 255, 209, 209 ) 0%, rgb( 255, 255, 255 ) 100%);
     position: relative;
     width: auto;
     height: auto;
 }
 button:active {
-    border-width: 1.333px;
-    border-color: rgb( 148, 148, 148 );
+    border-width: 1px;
+    border-color: rgb( 186, 132, 132 );
     border-style: solid;
     border-radius: 3px;
-    background-image: -moz-linear-gradient( 90deg, rgb( 247, 247, 247 ) 0%, rgb( 223, 223, 223 ) 100%);
-    background-image: -webkit-linear-gradient( 90deg, rgb( 247, 247, 247 ) 0%, rgb( 223, 223, 223 ) 100%);
+    background-image: -moz-linear-gradient( 90deg, rgb( 255, 255, 255 ) 0%, rgb( 255, 211, 211 ) 100%);
+    background-image: -webkit-linear-gradient( 90deg, rgb( 255, 255, 255 ) 0%, rgb( 255, 211, 211 ) 100%);
     position: relative;
     width: auto;
     height: auto;
